Replace serijski with sekvencijalno

--- a/zavrsni.tex
+++ b/zavrsni.tex
@@ -72,7 +72,7 @@ Osvrnimo se prvo na nekoliko postojećih sustava za izvršavanje i evaluaciju pr
 
 SPRUT{\footnote{\url{https://balrog.zemris.fer.hr/}}} je sustav za vrednovanje studentskih vježbi koji se koristi automatsko vrednovanje studentskih laboratorijskih vježbi na Fakultetu elektrotehnike i računarstva u sklopu kolegija poput {\textit{Uvod u teoriju računarstva (86537)}}{\footnote{\url{https://www.fer.unizg.hr/predmet/utrz}}} te {\textit{Prevođenje programskih jezika (86504)}}{\footnote{\url{https://www.fer.unizg.hr/predmet/ppj_a}}}.
 
-Iako SPRUT trenutno zadovoljava potrebe na trenutnim kolegijima, mana mu je serijski način izvođenja i nemogućnost razmjernog rasta, zbog čega vrednovanje studentskih vježbi traje dugo te je jedina mogućnost za optimizaciju vertikalni rast, tj. kupovina bržeg hardvera.
+Iako SPRUT trenutno zadovoljava potrebe na trenutnim kolegijima, mana mu je sekvencijalno izvođenje i nemogućnost razmjernog rasta, zbog čega vrednovanje studentskih vježbi traje dugo te je jedina mogućnost za optimizaciju vertikalni rast, tj. kupovina bržeg hardvera.
 
 \section{CodeAssign}
 
@@ -88,7 +88,7 @@ CodeAssign je većinskim dijelom otvorenog koda{\footnote{\url{https://github.co
 
 Judge0{\footnote{\url{http://judge0.com/}}} je javno dostupan sustav otvorenog koda{\footnote{\url{https://github.com/judge0}}} koji nudi uslugu sigurnog izvršavanja potencijalno malicioznog izvornog koda.
 
-Prednost Judge0 je u tome što sustav nudi jednostavno programsko sučelje kojim se mogu zakazati izvođenja programa, dok mu je mana to što nije namijenjen razmjernom rastu te također obrađuje zadatke serijski. 
+Prednost Judge0 je u tome što sustav nudi jednostavno programsko sučelje kojim se mogu zakazati izvođenja programa, dok mu je mana to što nije namijenjen razmjernom rastu te također obrađuje zadatke sekvencijalno. 
 
 \section{Evaluator}
 
