Add abstract and keywords

--- a/zavrsni.tex
+++ b/zavrsni.tex
@@ -704,16 +704,16 @@ Zaključak.
 \bibliographystyle{fer}
 
 \begin{sazetak}
-Sažetak na hrvatskom jeziku.
+Rad nudi osvrt na zahtjeve i tehničke poteškoće u ostvarivanju sustava za udaljeno izvođenje i vrednovanje studentskih programskih vježbi. Nakon kratkog pregleda postojećih rješenja, opisuje zahtjeve i značajke poželjnog sustava te nudi idejno rješenje koje zadovoljava te zahtjeve. Konačno, obrađuje konkretno rješenje ostvareno pomoću tehnologija Docker i Spring te opisuje način ostvarenja učinkovitog razmjernog rasta pomoću arhitekture bazirane na mikroservisima i izvršnim Docker slikama. Ostvareno rješenje ponuđeno je kao tehnologija otvorenog koda te se može iskoristiti u ostvarenju složenijih i zahtjevnijih sustava.
 
-\kljucnerijeci{Ključne riječi, odvojene zarezima.}
+\kljucnerijeci{udaljeno izvođenje, studentske programske vježbe, siguran, učinkovit, razmjeran rast, mikroservisi, SPRUT, Docker, Kotlin, Spring}
 \end{sazetak}
 
 \engtitle{Secure and Scalable Remote Execution of Students' Programming Assignments}
 \begin{abstract}
-Abstract.
+The paper gives an overview of the requirements and technical difficulties of an implementation of a system for remote execution and evaluation of students' programming assignments. After a brief overview of existing solutions, it describes the requirements and features of a desireable system and offers an idea of a solution that satisfies those requirements. Finally, it covers a concrete implementation based on Docker and Spring and describes an implementation of horizontal scalability based on a microservice architecture and executable Docker images. The implementation given is made available as open source and can be used as a building block for implementing more complex systems.
 
-\keywords{Keywords.}
+\keywords{remote execution, students' programming assignments, secure, efficient, scalable, horizontal scalability, microservices, SPRUT, Docker, Kotlin, Spring}
 \end{abstract}
 
 \end{document}
