--- a/zavrsni.tex
+++ b/zavrsni.tex
@@ -704,7 +704,7 @@ Zaključak.
 \bibliographystyle{fer}
 
 \begin{sazetak}
-Rad nudi osvrt na zahtjeve i tehničke poteškoće u ostvarivanju sustava za udaljeno izvođenje i vrednovanje studentskih programskih vježbi. Nakon kratkog pregleda postojećih rješenja, opisuje zahtjeve i značajke poželjnog sustava te nudi idejno rješenje koje zadovoljava te zahtjeve. Konačno, obrađuje konkretno rješenje ostvareno pomoću tehnologija Docker i Spring te opisuje način ostvarenja učinkovitog razmjernog rasta pomoću arhitekture bazirane na mikroservisima i izvršnim Docker slikama. Ostvareno rješenje ponuđeno je kao tehnologija otvorenog koda te se može iskoristiti u ostvarenju složenijih i zahtjevnijih sustava.
+Rad daje osvrt na zahtjeve i tehničke poteškoće u ostvarivanju sustava za udaljeno izvođenje i vrednovanje studentskih programskih vježbi. Nakon kratkog pregleda postojećih rješenja, opisuje zahtjeve i značajke poželjnog sustava te nudi idejno rješenje koje zadovoljava te zahtjeve. Konačno, obrađuje konkretno rješenje ostvareno pomoću tehnologija Docker i Spring te opisuje način ostvarenja učinkovitog razmjernog rasta pomoću arhitekture bazirane na mikroservisima i izvršnim Docker slikama. Ostvareno rješenje ponuđeno je kao tehnologija otvorenog koda te se može iskoristiti u ostvarenju složenijih i zahtjevnijih sustava.
 
 \kljucnerijeci{udaljeno izvođenje, studentske programske vježbe, siguran, učinkovit, razmjeran rast, mikroservisi, SPRUT, Docker, Kotlin, Spring}
 \end{sazetak}
