Add packing subsections

--- a/zavrsni.tex
+++ b/zavrsni.tex
@@ -764,6 +764,10 @@ Nakon ovog koraka nova izvršna okolina spremna je za korištenje u sustavu i iz
 
 \section{Pakiranje rješenja u izvršne Docker slike}
 
+\subsection{Pakiranje pomoću komandnolinijske aplikacije}
+
+\subsection{Pakiranje pomoću web usluge}
+
 \section{Zakazivanje izvršavanja}
 
 \section{Dohvat rezultata izvršavanja}
