Remove latest tag
Not really necessary and it takes up space

--- a/zavrsni.tex
+++ b/zavrsni.tex
@@ -753,9 +753,9 @@ Jednom kada je sve spremno, kako bi temeljnu sliku mogli koristiti, potrebno joj
 
 \begin{lstlisting}
 docker build -t \
-	registry.example.xyz/sandworm/base/izvrsna-okolina:latest .;
+	registry.example.xyz/sandworm/base/izvrsna-okolina .;
 docker push \
-	registry.example.xyz/sandworm/base/izvrsna-okolina:latest;
+	registry.example.xyz/sandworm/base/izvrsna-okolina;
 \end{lstlisting}
 
 Nakon ovog koraka nova izvršna okolina spremna je za korištenje u sustavu i izvršavanje zadataka.
