--- a/zavrsni.tex
+++ b/zavrsni.tex
@@ -695,7 +695,7 @@ Za preuzimanje svih potprojekata dovoljno je izvršiti naredbu
 git clone --recursive https://github.com/mrPjer/sandworm.git
 \end{lstlisting}
 
-čime će u direktorij {\textit{sandworm}} biti preuzeti svi potprojekti.
+čime će u direktorij {\textit{sandworm}} biti preuzeti svi potprojekti. U slučaju nedostupnosti prvog poslužitelja, projekt je zrcaljen na web sjedištu {\url{https://zr.psegina.com/sandworm.git}}.
 
 \section{Instalacija temeljnih slika}
 \label{sec:base-images}
