--- a/zavrsni.tex
+++ b/zavrsni.tex
@@ -886,7 +886,7 @@ Nakon što su slike izgrađene, poželjno je poslati ih na dijeljeni registar Do
 
 \subsection{Pakiranje pomoću web usluge}
 
-Uz pretpostavku da je web usluga za pakiranje pokrenuta i dostupna na adresi {\textit{packer.example.com}}, pakiranje možemo izvršiti i putem protokola HTTP. Ovaj postupak također zahtijeva da je pokrenuta i dostupna i usluga za prikupljanje i skladištenje rezultata pa ćemo pretpostaviti da je dostupna na adresi {\textit{logger.example.com}} te da zapise želimo ostvariti pod oznakon {\textit{hello-world}}.
+Uz pretpostavku da je web usluga za pakiranje pokrenuta i dostupna na adresi {\textit{packer.example.com}}, pakiranje možemo izvršiti i putem protokola HTTP. Ovaj postupak također zahtijeva da je pokrenuta i dostupna i usluga za prikupljanje i skladištenje rezultata pa ćemo pretpostaviti da je dostupna na adresi {\textit{logger.example.com}} te da zapise želimo ostvariti pod oznakom {\textit{hello-world}}.
 
 Prvo je potrebno ulaznu definiciju pretvoriti u zip arhivu:
 
